<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/HintStyle">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etName"
            android:hint="@string/hint_name"
            android:gravity="center_horizontal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/HintStyle">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etNumber"
            android:hint="@string/hint_number"
            android:gravity="center_horizontal"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:onClick="addData"
        android:text="@string/btn_submit"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnShowData"
        android:text="@string/btn_ShowData"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:layout_marginTop="5dp"
        android:onClick="readData"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnDeleteData"
        android:text="@string/btn_delete_data"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:layout_marginTop="5dp"
        android:onClick="deleteData"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnUpdateData"
        android:text="@string/btn_update_data"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:layout_marginTop="5dp"
        android:onClick="updateData"/>


</LinearLayout>